<resources>
    <string name="app_name">Quitter</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- LOGIN ACTIVITY -->
    <string name="login_edt_code">Your code</string>
    <string name="login_edt_password">Your password</string>
    <string name="login_btn_signin">SignIn</string>

    <!-- MAIN ACTIVITY -->
    <string name="title_receipts">Receipts</string>
    <string name="title_new">New</string>
    <string name="title_me">Me</string>

    <!-- FRAGMENT NEW RECEIPT -->
    <string name="frg_new_edt_name">Name</string>
    <string name="frg_new_edt_price">Price</string>
    <string name="frg_new_edt_date">Date</string>
    <string name="frg_new_edt_description">Description</string>
    <string name="frg_new_tv_category">Select category</string>
    <string-array name="frg_new_spn_category">
        <item>Food</item>
        <item>Accommodation</item>
        <item>Transport</item>
        <item>Others</item>
    </string-array>
    <string name="frg_new_tv_receipt">Add receipt photo</string>
    <string name="frg_new_iv_receipt">Receipt</string>
    <string name="frg_new_btn_save">Save new receipt</string>

    <!-- CV RECEIPT -->
    <string name="cv_receipt_name">Name</string>
    <string name="cv_receipt_description">Description</string>
    <string name="cv_receipt_date">Date</string>
    <string name="cv_receipt_category">Category</string>
    <string name="cv_receipt_price">Price</string>
    <string name="cv_receipt_key">Key</string>
    <string name="cv_receipt_iv">Image</string>
    <string name="cv_receipt">Card receipt</string>

    <!-- FRAGMENTE ME -->
    <string name="frg_me_name">My name</string>
    <string name="frg_me_email">Email</string>
    <string name="frg_me_code">Code</string>
    <string name="frg_me_logout">Log Out</string>
    <string name="main_activity_menu_pey_off">Pay off</string>

</resources>