<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_add">

    <fragment
        android:id="@+id/navigation_add"
        android:name="br.com.seasyc.providingaccount.views.fragments.ReceiptsFragment"
        android:label="@string/title_new"
        tools:layout="@layout/fragment_receipts" />

    <fragment
        android:id="@+id/navigation_add"
        android:name="br.com.seasyc.providingaccount.views.fragments.NewFragment"
        android:label="@string/title_receipts"
        tools:layout="@layout/fragment_new" />

    <fragment
        android:id="@+id/navigation_me"
        android:name="br.com.seasyc.providingaccount.views.fragments.MeFragment"
        android:label="@string/title_me"
        tools:layout="@layout/fragment_me" />
</navigation>